tests/All/fail/not-an-enum.rs
use fieldless_enum_tools::All;

#[derive(All)]
struct NotAnEnum {
    field1: u8,
    field2: u8,
}

fn main() {}
